--- a/cliente/index.html
+++ b/cliente/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link href="./style.css " rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title> Adopt a friend</title>
   </head>
   <body>
     <div id="root"></div>
